<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <!-- The main content view -->
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:background="#ffffff"
            >

        <RelativeLayout android:id="@+id/screenContainer"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="50dp"
                >

            <LinearLayout android:id="@+id/errorView"
                          android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:gravity="center"
                    >

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/error_conection_icon"
                           android:scaleType="center"
                        />

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textSize="15sp"
                          android:textColor="#8e8e8e"
                          android:text="@string/error_connection1"
                          android:gravity="center_horizontal"
                          android:layout_margin="10dp"
                        />

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textSize="12sp"
                          android:textColor="#8e8e8e"
                          android:text="@string/error_connection2"
                          android:gravity="center_horizontal"
                          android:layout_margin="10dp"
                        />

            </LinearLayout>

            <LinearLayout android:id="@+id/noDataView"
                          android:layout_width="match_parent" android:layout_height="match_parent"
                          android:orientation="vertical"
                          android:gravity="center"
                    >

                <ImageView android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:src="@drawable/error_conection_icon"
                           android:scaleType="center"
                        />

                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                          android:textSize="15sp"
                          android:textColor="#8e8e8e"
                          android:text="@string/error_no_data"
                          android:gravity="center_horizontal"
                          android:layout_margin="10dp"
                        />

            </LinearLayout>

            <ProgressBar android:id="@+id/loadingView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:indeterminate="true"
                    />

            <FrameLayout android:id="@+id/content"
                         android:layout_width="match_parent" android:layout_height="match_parent"
                    >

            </FrameLayout>

        </RelativeLayout>

        <ru.wwdi.metrika.topPanel.TopPanel
            android:id="@+id/topPanel"
                                              android:layout_width="match_parent" android:layout_height="wrap_content"
                                              android:layout_marginTop="0dp"
                                              android:orientation="vertical" />

    </FrameLayout>
    <!-- The navigation drawer -->
    <FrameLayout android:id="@+id/leftDrawer"
                 android:orientation="vertical"
                 android:layout_width="240dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="left"
                 android:background="#000000">


        <fragment
            android:name="ru.wwdi.metrika.menu.MenuFragment"
                  android:id="@+id/menuFragment"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent" />

    </FrameLayout>
</android.support.v4.widget.DrawerLayout>